--- a/src/App.css
+++ b/src/App.css
@@ -20,18 +20,18 @@
   }
 
   footer {
-    background-color: #403574;
+    background-color: #251863;
     
   }
 
   .container {
     border-radius: 5px;
-    background-color: #f1d7fc;
+    background-color: #d1f8e2;
     padding: 20px;
 }
 
   b1 {
-    color:rgb(233, 151, 183);
+    color:rgb(247, 186, 194);
   }
 
   b2 {
