--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,12 @@
    }
 
    body {
-    background-color: #f8ebb2;
+    background-image: url("https://mir-s3-cdn-cf.behance.net/project_modules/fs/ecc4eb72061939.5bda6a600c6da.jpg");
+    min-height: 100vh;
+    position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    /*background-color: #f8ebb2;*/
   }
 
   footer {
@@ -26,9 +31,9 @@
 
   .container {
     margin: 20px;
-    /*border-radius: 5px;*/
-    background-color: #d5fdf3;
-    padding: 20px;
+    border-radius: 5px;
+    background-color: #fdfad5a1;
+    padding: 10px;
 }
 
   b1 {
@@ -36,9 +41,11 @@
   }
 
   b2 {
-    color:rgb(73, 68, 117);
+    color:rgb(29, 23, 90);
   }
 
-  
-
+  button{
+    color:rgb(248, 0, 0);
+    background: rgb(240, 245, 164); 
+  }
   
